🔒 MAJOR: Implementação completa de segurança e proteção de dados
✨ NOVAS FUNCIONALIDADES:
- Sistema de banners com placeholders visuais
- Sistema de busca avançada com modal
- Integração com Unsplash para imagens
- Sistema de classificação de artigos com IA
- Monitor de performance em desenvolvimento

🔒 SEGURANÇA IMPLEMENTADA:
- Headers de segurança HTTP (CSP, XSS Protection, Frame Options)
- Rate limiting robusto com identificação de IP
- Validação de entrada com Zod em todas as APIs
- Logs seguros com sanitização de dados sensíveis
- CORS configurado adequadamente
- Middleware de autenticação para rotas admin

🛡️ PROTEÇÃO DE DADOS:
- Sanitização automática de logs
- Configuração de produção segura
- Headers de segurança em todas as respostas
- Proteção contra ataques XSS, CSRF e clickjacking

📚 DOCUMENTAÇÃO:
- BANNER_SYSTEM.md - Sistema de banners
- RENDERIZATION_FIXES.md - Correções de renderização
- PRESERVATION_SYSTEM.md - Sistema de preservação
- env.production.example - Configuração segura

🚀 PRONTO PARA VPS:
- Todas as correções de segurança implementadas
- Build funcionando perfeitamente
- Headers de segurança ativos
- Rate limiting configurado

Closes: #security #vps-ready #lgpd-compliance

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ CRON_SECRET="your-cron-secret-key"
 # HuggingFace API (Optional - for advanced AI features)
 HUGGINGFACE_API_KEY="your-huggingface-api-key"
 
+# Unsplash API (Optional - for article images)
+UNSPLASH_ACCESS_KEY="your-unsplash-access-key"
+
 # Sentry (Optional - for error monitoring)
 SENTRY_DSN="your-sentry-dsn"
 
