--- a/package.json
+++ b/package.json
@@ -56,21 +56,22 @@
     "helmet": "^8.1.0",
     "lru-cache": "^11.1.0",
     "lucide-react": "^0.294.0",
-    "next": "14.0.4",
+    "next": "^15.4.7",
     "next-auth": "^4.24.5",
     "node-cron": "^3.0.3",
-    "onnxruntime-node": "^1.22.0-rev",
     "prisma": "^5.7.0",
     "rate-limiter-flexible": "^7.2.0",
     "react": "^18.2.0",
+    "react-adsense": "^0.1.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.6.0",
+    "react-responsive": "^10.0.1",
     "rss-parser": "^3.13.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "winston": "^3.17.0",
-    "zod": "^3.22.4"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.7.0",
